# haskell-sandbox

./: .gitignore  LICENSE  README.md  haskell-sandbox.cabal  hello-haskell.cabal
app/: Main.hs
src/: Greeting.hs  Lib.hs  Sort.hs  Tree.hs
