name:               haskell-sandbox
version:            0.1.0.0
license:            BSD3
build-type:         Simple
cabal-version:      >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Greeting
  build-depends:    base == 4.*

executable hello-haskell
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , haskell-sandbox
